--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "payhub-client",
-  "homepage": "http://unihezportal.com.ng/payhub",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "12.18.3",
+    "npm": "6.14.6"
+  }, 
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "classnames": "^2.2.6",
+    "http-proxy-middleware": "^1.0.6",
     "jwt-decode": "^3.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -42,6 +46,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "https://victoriousloycefoundation.com/payhub"
+  }
 }
