--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "payhub-client",
+  "homepage": "https://brave-heisenberg-b926c9.netlify.app",
   "version": "0.1.0",
   "private": true,
   "engines": {
